# salesforce-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: server.py
src/assets/: field.tmpl  field_permission.tmpl  profile.tmpl
src/assets/Flexipages/: HardcodedPage.flexipage  PageWithRichTextComponent.flexipage
src/assets/create_class_tmpl/: package.xml
src/assets/create_class_tmpl/classes/: ##class_name##.cls
src/assets/create_custom_app_tmpl/: package.xml
src/assets/create_custom_app_tmpl/applications/: Template.app-meta.xml
src/assets/create_custom_metadata_type_tmpl/: package.xml
src/assets/create_custom_metadata_type_tmpl/objects/: ##api_name##.object
src/assets/create_dashboard_folder_tmpl/: package.xml
src/assets/create_dashboard_folder_tmpl/dashboards/: Template.folder-meta.xml
src/assets/create_object_tmpl/: package.xml
src/assets/create_object_tmpl/objects/: ##api_name##.object
src/assets/create_record_type_tmpl/: package.xml
src/assets/create_record_type_tmpl/recordTypes/: Template.recordType-meta.xml
src/assets/create_report_folder_tmpl/: package.xml
src/assets/create_report_folder_tmpl/reports/: Template.folder-meta.xml
src/assets/create_report_tmpl/: package.xml
src/assets/create_report_tmpl/reports/: Template.report-meta.xml
src/assets/create_report_type_tmpl/: package.xml
src/assets/create_tab_tmpl/: package.xml
src/assets/create_tab_tmpl/tabs/: Template.tab-meta.xml
src/assets/delete_fields_tmpl/: destructiveChanges.xml
src/salesforcemcp/: definitions.py  implementations.py  sfdc_client.py
(+1 files in other folders)
